--- a/r_package/testing/testing_Rpackage.Rmd
+++ b/r_package/testing/testing_Rpackage.Rmd
@@ -712,19 +712,13 @@ cf_data <-
 # Calculate health impacts
 
 ```{r Codebook}
-# SHOW ACF ####
-# ERROR (FIXED NOW): there doesn't seem to be a column "outcome_label_de"
 # Do not forget yll
-codebook <- unique(bhd_data[, c("outcome_id", "mort_morb")]) #%>%  removed "outcome_label_de" from the column selection;  
-  # Removed the next lines
-  # Add label for crf
-  # replacing premature deaths / yll by mortality
-  #mutate(crf_label_de = ifelse(outcome_id %in% c("premature deaths_all causes_adults", "yll_all causes_adults"),
-  #                             "Krankheitsbedingte Sterblichkeit bei Erwachsenen",
-  #                             ifelse(outcome_id %in% c("premature deaths_all causes_infants",
-  #                                                      "yll_all causes_infants"),
-  #                                    "Säuglingssterblichkeit",
-  #                                    outcome_label_de)))
+codebook <- unique(bhd_data[, c("outcome_id", "mort_morb")]) 
+
+#TODO: Here a table with the correspondence between 
+# short names or ids (without spaces) 
+# and labels (spaces and eventually capital letter)
+# should be built
 ```
 
 ```{r input data}
