--- a/r_package/bestcost/testing/testing_Rpackage.Rmd
+++ b/r_package/bestcost/testing/testing_Rpackage.Rmd
@@ -51,7 +51,7 @@ if(!"bestcost" %in% installed.packages()[, "Package"]){
   #gitcreds::gitcreds_set()
   credentials::set_github_pat()
   devtools::install_github(repo = "best-cost/best-cost_WPs",
-                           subdir = "/r_package/bestcost",
+                           subdir = "/bestcost",
                            force =TRUE)
 }
 
@@ -165,7 +165,7 @@ rescale_conc_pmFraction <-
 
 # Extract the value of the conversion factor from the generic_data csv file
 percentage_pm2.5_in_pm10 <- 
-  read.csv("r_package/testing/input/generic_data.csv", sep = ";") %>% 
+  read.csv("testing/input/generic_data.csv", sep = ";") %>% 
   dplyr::filter(parameter_name %in% "percentage_pm2.5_in_pm10") %>%
   dplyr::select(value) %>%
   dplyr::pull()
@@ -177,7 +177,7 @@ percentage_pm2.5_in_pm10 <-
 
 # Read CRF data inserted manually in the csv table
 crf_rawdata <- 
-  read.csv("r_package/testing/input/crf.csv",
+  read.csv("testing/input/crf.csv",
            sep = ";",
            na.strings=c("NA", ""))
 ```
@@ -320,7 +320,7 @@ crf_data_morbidities<-
 # Population data by age
 # To be used in the life table approach
 population_byAge_rawdata <-
-  read.csv2("r_package/testing/input/population/population_byAge_bySex_CH_2018_2019.csv") %>%
+  read.csv2("testing/input/population/population_byAge_bySex_CH_2018_2019.csv") %>%
   # Rename columns
   dplyr::rename("age" = "Alter",
                 "male_end2018" = "Mann.2018",
@@ -365,7 +365,7 @@ total_population <-
 
 # Baseline health data 
 bhd_rawdata <- 
-  read.csv("r_package/testing/input/bhd.csv", sep = ";")
+  read.csv("testing/input/bhd.csv", sep = ";")
 
 # Adapt the rawdata as needed
 bhd_data <- 
@@ -420,7 +420,7 @@ for(s in sex){
   lifetable[[s]] <- 
     read.csv2(
       # The raw data are for the period 2013-2020 but we focused on 2015-2019 (five years period)
-      paste0("r_package/testing/input/life_tables/life_table_2013_2020_",
+      paste0("testing/input/life_tables/life_table_2013_2020_",
              s,
              ".csv")) %>%
     # Rename columns
@@ -465,20 +465,20 @@ mortality_data <- list()
 # Read non-natural mortality raw data for 2019 (average of the period 2009-2019)
 nonNatural_mortality_rawdata<- 
    list(
-     male = read.csv2("r_package/testing/input/mortality/nonNatural_mortality_byAge_2009_2019_male.csv",
+     male = read.csv2("testing/input/mortality/nonNatural_mortality_byAge_2009_2019_male.csv",
                       na.strings =".", 
                       check.names = FALSE),
-     female = read.csv2("r_package/testing/input/mortality/nonNatural_mortality_byAge_2009_2019_female.csv",
+     female = read.csv2("testing/input/mortality/nonNatural_mortality_byAge_2009_2019_female.csv",
                         na.strings =".", 
                       check.names = FALSE))
 
 # Read total mortality raw data for 2019 (average of the period 2009-2019)
 total_mortality_rawdata <- 
   list(
-    male = read.csv2("r_package/testing/input/mortality/total_mortality_byAge_2009_2019_male.csv",
+    male = read.csv2("testing/input/mortality/total_mortality_byAge_2009_2019_male.csv",
                      na.strings =".", 
                       check.names = FALSE),
-    female = read.csv2("r_package/testing/input/mortality/total_mortality_byAge_2009_2019_female.csv",
+    female = read.csv2("testing/input/mortality/total_mortality_byAge_2009_2019_female.csv",
                        na.strings =".", 
                       check.names = FALSE))
 
@@ -636,7 +636,7 @@ lifetable_airqplus <-
 
 # Select relevant columns
 exp_rawdata <- 
-  read.csv("r_package/testing/input/exp.csv",
+  read.csv("testing/input/exp.csv",
            sep = ";",
            na.strings=c("NA", ""))
 
@@ -940,6 +940,6 @@ impact_mortality <-
 
 ```{r}
 write.csv2(lifetable_airqplus,
-            "r_package/testing/output/lifetable_airqplus_2019_ch.csv", 
+            "testing/output/lifetable_airqplus_2019_ch.csv", 
             row.names = FALSE)
 ```
